--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
     <script src="vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
 
     <!-- Custom Theme Scripts -->
-    <script src="../build/js/custom.min.js"></script>
+    <script src="js/custom.min.js"></script>
 	
   </body>
 </html>
