--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 <div class="count">456</div>
                 <span class="count_bottom">Employees</span>
               </div>
-              <div class="col-md-3 offset-md-2 tile_stats_count" >
+              <div class="col-md-3 offset-md-1 tile_stats_count" >
                   <span class="count_top"><i class="fa fa-user"></i>Total Volunteering hours clocked</span>
                   <div class="count">06:44:21</div>
               </div>
@@ -312,6 +312,30 @@
                 <span class="count_bottom">NGO's</span>
               </div>
             
+          </div>
+        </div>
+        <div class="row" style="display: inline-block;width: 100%" >
+          <div class="tile_count">
+              <div class="col-md-1 col-sm-4  tile_stats_count">
+                <span class="count_top"><i class="fa fa-user"></i> Open</span>
+                <div class="count">2500</div>
+                <span class="count_bottom">Project</span>
+              </div>
+              <div class="col-md-1 col-sm-4  tile_stats_count">
+                <span class="count_top"><i class="fa fa-user"></i> Application recived</span>
+                <div class="count">2500</div>
+                <span class="count_bottom">Project</span>
+              </div>
+              <div class="col-md-1 col-sm-4  tile_stats_count">
+                <span class="count_top"><i class="fa fa-user"></i> Matched</span>
+                <div class="count">2500</div>
+                <span class="count_bottom">Project</span>
+              </div>
+              <div class="col-md-1 col-sm-4  tile_stats_count">
+                <span class="count_top"><i class="fa fa-user"></i> Completed</span>
+                <div class="count">2500</div>
+                <span class="count_bottom">Project</span>
+              </div>
           </div>
         </div>
           <!-- /top tiles -->
