--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <div class="col-md-3 left_col">
         <div class="left_col scroll-view">
           <div class="navbar nav_title" style="border: 0;background: white;">
-            <a href="index.html" class="site_title"><img src="images/ServiceNow-Logo.png" alt="..."
-                height="100%" /></a>
+            <a href="index.html" class="site_title"><img src="images/Chezuba-Logo-dark.png" alt="logo"
+                height="auto" width="100%" /></a>
           </div>
 
           <div class="clearfix"></div>
